@@ -1,0 +1,5 @@
+use Test::More;
+
+use Test::Pod 1.14;
+
+all_pod_files_ok();
